// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag styled components StyledAction : StyledAction has correct styles when  1`] = `
Object {
  ":focus": Object {
    "backgroundColor": null,
    "color": null,
  },
  ":hover": Object {
    "backgroundColor": null,
    "color": null,
  },
  "alignItems": "center",
  "borderBottomRightRadius": "$theme.borders.radius400",
  "borderTopRightRadius": "$theme.borders.radius400",
  "cursor": "pointer",
  "display": "flex",
  "marginLeft": "8px",
  "paddingBottom": "7px",
  "paddingLeft": "8px",
  "paddingRight": "8px",
  "paddingTop": "7px",
}
`;

exports[`Tag styled components StyledAction : StyledAction has correct styles when $disabled 1`] = `
Object {
  ":focus": Object {},
  ":hover": Object {},
  "alignItems": "center",
  "borderBottomRightRadius": "$theme.borders.radius400",
  "borderTopRightRadius": "$theme.borders.radius400",
  "cursor": "not-allowed",
  "display": "flex",
  "marginLeft": "8px",
  "paddingBottom": "7px",
  "paddingLeft": "8px",
  "paddingRight": "8px",
  "paddingTop": "7px",
}
`;

exports[`Tag styled components StyledRoot : StyledRoot has correct styles when  1`] = `
Object {
  ":focus": Object {
    "backgroundColor": null,
    "borderColor": "transparent",
    "color": undefined,
  },
  ":hover": Object {
    "backgroundColor": null,
    "borderColor": "transparent",
    "color": undefined,
  },
  "alignItems": "center",
  "backgroundColor": null,
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius400",
  "borderStyle": "solid",
  "borderWidth": "0",
  "boxSizing": "border-box",
  "color": undefined,
  "cursor": "default",
  "display": "inline-flex",
  "fontFamily": "$theme.typography.font250.fontFamily",
  "fontSize": "$theme.typography.font250.fontSize",
  "fontWeight": "$theme.typography.font250.fontWeight",
  "height": "$theme.sizing.scale800",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font250.lineHeight",
  "marginBottom": "5px",
  "marginLeft": "5px",
  "marginRight": "5px",
  "marginTop": "5px",
  "opacity": null,
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale0",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale0",
}
`;

exports[`Tag styled components StyledRoot : StyledRoot has correct styles when $closable 1`] = `
Object {
  ":focus": Object {
    "backgroundColor": null,
    "borderColor": "transparent",
    "color": undefined,
  },
  ":hover": Object {
    "backgroundColor": null,
    "borderColor": "transparent",
    "color": undefined,
  },
  "alignItems": "center",
  "backgroundColor": null,
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius400",
  "borderStyle": "solid",
  "borderWidth": "0",
  "boxSizing": "border-box",
  "color": undefined,
  "cursor": "default",
  "display": "inline-flex",
  "fontFamily": "$theme.typography.font250.fontFamily",
  "fontSize": "$theme.typography.font250.fontSize",
  "fontWeight": "$theme.typography.font250.fontWeight",
  "height": "$theme.sizing.scale800",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font250.lineHeight",
  "marginBottom": "5px",
  "marginLeft": "5px",
  "marginRight": "5px",
  "marginTop": "5px",
  "opacity": null,
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale0",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale0",
}
`;

exports[`Tag styled components StyledRoot : StyledRoot has correct styles when $disabled 1`] = `
Object {
  ":focus": Object {},
  ":hover": Object {},
  "alignItems": "center",
  "backgroundColor": null,
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius400",
  "borderStyle": "solid",
  "borderWidth": "0",
  "boxSizing": "border-box",
  "color": undefined,
  "cursor": "not-allowed",
  "display": "inline-flex",
  "fontFamily": "$theme.typography.font250.fontFamily",
  "fontSize": "$theme.typography.font250.fontSize",
  "fontWeight": "$theme.typography.font250.fontWeight",
  "height": "$theme.sizing.scale800",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font250.lineHeight",
  "marginBottom": "5px",
  "marginLeft": "5px",
  "marginRight": "5px",
  "marginTop": "5px",
  "opacity": ".56",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale0",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale0",
}
`;

exports[`Tag styled components StyledRoot : StyledRoot has correct styles when $isActive 1`] = `
Object {
  ":focus": Object {
    "backgroundColor": null,
    "borderColor": "transparent",
    "color": undefined,
  },
  ":hover": Object {
    "backgroundColor": null,
    "borderColor": "transparent",
    "color": undefined,
  },
  "alignItems": "center",
  "backgroundColor": null,
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius400",
  "borderStyle": "solid",
  "borderWidth": "0",
  "boxSizing": "border-box",
  "color": undefined,
  "cursor": "default",
  "display": "inline-flex",
  "fontFamily": "$theme.typography.font250.fontFamily",
  "fontSize": "$theme.typography.font250.fontSize",
  "fontWeight": "$theme.typography.font250.fontWeight",
  "height": "$theme.sizing.scale800",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font250.lineHeight",
  "marginBottom": "5px",
  "marginLeft": "5px",
  "marginRight": "5px",
  "marginTop": "5px",
  "opacity": null,
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale0",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale0",
}
`;

exports[`Tag styled components StyledRoot : StyledRoot has correct styles when $isFocused 1`] = `
Object {
  ":focus": Object {
    "backgroundColor": null,
    "borderColor": "transparent",
    "color": undefined,
  },
  ":hover": Object {
    "backgroundColor": null,
    "borderColor": "transparent",
    "color": undefined,
  },
  "alignItems": "center",
  "backgroundColor": null,
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius400",
  "borderStyle": "solid",
  "borderWidth": "0",
  "boxSizing": "border-box",
  "color": undefined,
  "cursor": "default",
  "display": "inline-flex",
  "fontFamily": "$theme.typography.font250.fontFamily",
  "fontSize": "$theme.typography.font250.fontSize",
  "fontWeight": "$theme.typography.font250.fontWeight",
  "height": "$theme.sizing.scale800",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font250.lineHeight",
  "marginBottom": "5px",
  "marginLeft": "5px",
  "marginRight": "5px",
  "marginTop": "5px",
  "opacity": null,
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale0",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale0",
}
`;
